--- a/index.html
+++ b/index.html
@@ -6,46 +6,46 @@
         <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
     </head>
     <body>
-        <header class="aaa">  
-            <img src="./eisenhower-matrix.jpg" alt="">  
-            <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>  
+        <header class="eisenhower-block">  
+            <img class="eisenhower-block__img" src="./eisenhower-matrix.jpg" alt="">  
+            <a class="eisenhower-block__href" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>  
         </header>
-        <main class="centered-main-page-element">  
+        <main class="todo-list">  
             <label for="new-task">Add Item</label>  
-            <section class="task-row-wrapper">  
-                <input id="new-task"class="task" type="text">  
-                <button>Add</button>  
+            <section class="add-item-wrapper">  
+                <input id="new-task"class="todo-list__input todo-list__input-text" type="text">  
+                <button class="todo-list__button">Add</button>  
             </section>
-            <h3>Todo</h3>
-            <ul id="incompleteTasks">
-                <li>  
-                    <input type="checkbox">  
-                    <label class="task">Pay Bills</label>  
-                    <input type="text" class="task">  
-                    <button class="edit">Edit</button>  
-                    <button class="delete">  
-                        <img src="./remove.svg" alt="remove">  
+            <h3 class="todo-list__heading">Todo</h3>
+            <ul class="in-complete-tasks">
+                <li class="todo-list__li">  
+                    <input class="todo-list__input todo-list__input-checkbox" type="checkbox">  
+                    <label class="todo-list__label">Pay Bills</label>  
+                    <input type="text" class="todo-list__input todo-list__input-text">  
+                    <button class="todo-list__button edit">Edit</button>  
+                    <button class="todo-list__button delete">  
+                        <img class="todo-list__img" src="./remove.svg" alt="remove">  
                     </button>  
                 </li>
-                <li class="editMode">  
-                    <input type="checkbox">  
-                    <label class="task">Go Shopping</label>  
-                    <input type="text" value="Go Shopping" class="task">  
-                    <button class="edit">Save</button>  
-                    <button class="delete">  
-                        <img src="./remove.svg" alt="remove">  
+                <li class="todo-list__li edit-mode">  
+                    <input class="todo-list__input todo-list__input-checkbox" type="checkbox">  
+                    <label class="todo-list__label">Go Shopping</label>  
+                    <input type="text" value="Go Shopping" class="todo-list__input todo-list__input-text">  
+                    <button class="todo-list__button edit">Save</button>  
+                    <button class="todo-list__button delete">  
+                        <img class="todo-list__img" src="./remove.svg" alt="remove">  
                     </button> 
                 </li>
             </ul>  
-            <h3>Completed</h3>  
-            <ul id="completed-tasks">  
-                <li>  
-                    <input type="checkbox" checked>  
-                    <label class="task">See the Doctor</label>  
-                    <input type="text" class="task">  
-                    <button class="edit">Edit</button>  
-                    <button class="delete">  
-                        <img src="./remove.svg" alt="remove">  
+            <h3 class="todo-list__heading">Completed</h3>  
+            <ul class="completed-tasks">  
+                <li class="todo-list__li">  
+                    <input class="todo-list__input todo-list__input-checkbox" type="checkbox" checked>  
+                    <label class="todo-list__label">See the Doctor</label>  
+                    <input type="text" class="todo-list__input todo-list__input-text">  
+                    <button class="todo-list__button edit">Edit</button>  
+                    <button class="todo-list__button delete">  
+                        <img class="todo-list__img" src="./remove.svg" alt="remove">  
                     </button>
                 </li>
             </ul>
